--- a/y2024/Crescendo/WebDash.html
+++ b/y2024/Crescendo/WebDash.html
@@ -78,7 +78,6 @@
     tab-name="Arm Pivot"
     slot="tab"
     source-provider="NetworkTables"
-    selected=""
 ><frc-line-chart
         chart-title="Line Chart"
         source-provider="NetworkTables"
@@ -152,7 +151,7 @@
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-2"
+            id="vaadin-number-field-728"
             aria-labelledby="label-vaadin-number-field-632"
             aria-describedby=""
             min="NaN"
@@ -161,7 +160,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-632"
-            for="vaadin-number-field-2"
+            for="vaadin-number-field-728"
         >Rel Arm Angle</label>
         <div
             slot="error-message"
@@ -182,7 +181,7 @@
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-3"
+            id="vaadin-number-field-729"
             aria-labelledby="label-vaadin-number-field-633"
             aria-describedby=""
             min="NaN"
@@ -191,7 +190,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-633"
-            for="vaadin-number-field-3"
+            for="vaadin-number-field-729"
         >Percent Output</label>
         <div
             slot="error-message"
@@ -212,7 +211,7 @@
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-4"
+            id="vaadin-number-field-730"
             aria-labelledby="label-vaadin-number-field-689"
             aria-describedby=""
             min="NaN"
@@ -221,7 +220,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-689"
-            for="vaadin-number-field-4"
+            for="vaadin-number-field-730"
         >Abs Arm ANgle</label>
         <div
             slot="error-message"
@@ -314,7 +313,7 @@
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-5"
+            id="vaadin-number-field-731"
             aria-labelledby="label-vaadin-number-field-556"
             aria-describedby=""
             min="NaN"
@@ -323,7 +322,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-556"
-            for="vaadin-number-field-5"
+            for="vaadin-number-field-731"
         >Shooter RPM</label>
         <div
             slot="error-message"
@@ -344,7 +343,7 @@
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-6"
+            id="vaadin-number-field-732"
             aria-labelledby="label-vaadin-number-field-580"
             aria-describedby=""
             min="NaN"
@@ -353,7 +352,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-580"
-            for="vaadin-number-field-6"
+            for="vaadin-number-field-732"
         >Percent Output</label>
         <div
             slot="error-message"
@@ -378,7 +377,7 @@
             slot="input"
             value="0"
             type="number"
-            id="vaadin-number-field-7"
+            id="vaadin-number-field-733"
             aria-labelledby="label-vaadin-number-field-224"
             aria-describedby=""
             min="NaN"
@@ -387,7 +386,7 @@
         ><label
             slot="label"
             id="label-vaadin-number-field-224"
-            for="vaadin-number-field-7"
+            for="vaadin-number-field-733"
         >Shooter Goal</label>
         <div
             slot="error-message"
@@ -555,4 +554,304 @@
         source-key="/Preferences"
         source-provider="NetworkTables"
         style="transform: translate(120px, 75px); width: 429.2px; height: 332.4px;"
-    ></frc-preferences-wrapper></dashboard-tab>
+    ></frc-preferences-wrapper></dashboard-tab><dashboard-tab
+    tab-name="Led Test"
+    slot="tab"
+    source-provider="NetworkTables"
+    selected=""
+><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(45px, 37px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 0"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(45px, 101px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 1"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(48px, 169px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 2"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(51px, 237px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 3"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(47px, 315px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 4"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(44px, 384px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 5"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(46px, 450px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 6"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(46px, 523px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 7"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(207px, 43px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 8"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(204px, 118px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 9"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(202px, 181px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 10"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(202px, 234px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 11"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(193px, 315px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 12"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(198px, 378px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 13"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(203px, 445px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 14"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(200px, 524px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 15"
+    ></frc-robot-command>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(386px, 41px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 16"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(385px, 113px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 17"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(387px, 175px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 18"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(374px, 230px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 19"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(373px, 307px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 20"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(363px, 375px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 21"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(362px, 442px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 22"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(355px, 522px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 23"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(544px, 44px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 24"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(536px, 107px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 25"
+    ></frc-robot-command>
+    <frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(531px, 170px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 26"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(539px, 244px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 27"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(543px, 305px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 28"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(549px, 373px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 29"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(551px, 449px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 30"
+    ></frc-robot-command><frc-robot-command
+        source-provider="NetworkTables"
+        style="transform: translate(551px, 521px);"
+        source-key="/Shuffleboard/Leds/Raw Bit 31"
+    ></frc-robot-command>
+
+
+
+
+
+    <vaadin-number-field
+        label="Full"
+        value="0"
+        has-value=""
+        has-label=""
+        source-provider="NetworkTables"
+        style="transform: translate(803px, 22px);"
+        source-key="/SmartDashboard/LED Data"
+        min="NaN"
+        max="NaN"
+    ><input
+            slot="input"
+            value="0"
+            type="number"
+            id="vaadin-number-field-734"
+            aria-labelledby="label-vaadin-number-field-265"
+            aria-describedby=""
+            min="NaN"
+            max="NaN"
+            step="any"
+        ><label
+            slot="label"
+            id="label-vaadin-number-field-265"
+            for="vaadin-number-field-734"
+        >Label</label>
+        <div
+            slot="error-message"
+            id="error-message-vaadin-number-field-164"
+            hidden=""
+        ></div>
+    </vaadin-number-field><vaadin-number-field
+        label="Left"
+        value="0"
+        has-value=""
+        has-label=""
+        source-provider="NetworkTables"
+        style="transform: translate(812px, 145px);"
+        source-key="/SmartDashboard/LED Left"
+        placeholder=""
+        min="NaN"
+        max="NaN"
+    ><input
+            slot="input"
+            value="0"
+            type="number"
+            id="vaadin-number-field-1615"
+            aria-labelledby="label-vaadin-number-field-1643"
+            aria-describedby=""
+            min="undefined"
+            max="undefined"
+            step="any"
+        ><label
+            slot="label"
+            id="label-vaadin-number-field-1643"
+            for="vaadin-number-field-1615"
+        >Left</label>
+        <div
+            slot="error-message"
+            id="error-message-vaadin-number-field-948"
+            hidden=""
+        ></div>
+    </vaadin-number-field><vaadin-number-field
+        label="Right"
+        value="0"
+        has-value=""
+        has-label=""
+        source-provider="NetworkTables"
+        style="transform: translate(818px, 267px);"
+        source-key="/SmartDashboard/LED Right"
+        placeholder=""
+        min="NaN"
+        max="NaN"
+    ><input
+            slot="input"
+            value="0"
+            type="number"
+            id="vaadin-number-field-1616"
+            aria-labelledby="label-vaadin-number-field-1644"
+            aria-describedby=""
+            min="undefined"
+            max="undefined"
+            step="any"
+        ><label
+            slot="label"
+            id="label-vaadin-number-field-1644"
+            for="vaadin-number-field-1616"
+        >Right</label>
+        <div
+            slot="error-message"
+            id="error-message-vaadin-number-field-949"
+            hidden=""
+        ></div>
+    </vaadin-number-field>
+    <frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(45px, 37px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 0"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(45px, 101px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 1"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(48px, 169px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 2"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(51px, 237px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 3"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(47px, 315px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 4"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(44px, 384px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 5"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(46px, 450px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 6"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(46px, 523px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 7"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(207px, 43px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 8"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(204px, 118px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 9"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(202px, 181px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 10"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(202px, 234px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 11"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(193px, 315px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 12"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(198px, 378px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 13"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(203px, 445px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 14"
+    ></frc-robot-command><frc-robot-command
+            source-provider="NetworkTables"
+            style="transform: translate(200px, 524px);"
+            source-key="/Shuffleboard/Leds/Arduino Bit 15"
+    ></frc-robot-command>
+
+</dashboard-tab>
